--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -82,7 +82,7 @@
                                     <rect key="frame" x="24" y="335" width="322" height="30"/>
                                 </variation>
                             </textField>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zHq-bN-qCT">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zHq-bN-qCT" userLabel="messageLabel">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -105,6 +105,15 @@
                                     <action selector="sendMailButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="pbW-VK-3IM"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWH-CU-kge" userLabel="nameLabel">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="194" y="235" width="152" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -114,6 +123,7 @@
                                 <exclude reference="kbX-Ce-1fP"/>
                                 <exclude reference="zHq-bN-qCT"/>
                                 <exclude reference="Dce-8c-tlN"/>
+                                <exclude reference="cWH-CU-kge"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -123,6 +133,7 @@
                                 <include reference="kbX-Ce-1fP"/>
                                 <include reference="zHq-bN-qCT"/>
                                 <include reference="Dce-8c-tlN"/>
+                                <include reference="cWH-CU-kge"/>
                             </mask>
                         </variation>
                     </view>
@@ -131,11 +142,12 @@
                         <outlet property="enterNameTextField" destination="qbV-t3-3C0" id="2wj-7h-qzJ"/>
                         <outlet property="mailButton" destination="Dce-8c-tlN" id="sn2-bY-A4m"/>
                         <outlet property="messageLabel" destination="zHq-bN-qCT" id="kt8-mE-VtX"/>
+                        <outlet property="nameLabel" destination="cWH-CU-kge" id="GrT-9f-zdS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1212" y="353"/>
+            <point key="canvasLocation" x="1317" y="353"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pji-Gh-NBG">
